--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.55.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
     "swiper": "^11.2.6"
   },
